--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "dev": "ts-node-dev --respawn --transpileOnly ./app/"
   },
   "dependencies": {
+    "chalk": "^2.4.2",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "mongoose": "^5.6.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/graphql": "^14.2.3",
+    "@types/mongoose": "^5.5.11",
     "@types/node": "^12.6.8",
     "ts-node-dev": "^1.0.0-pre.40",
     "typescript": "^3.5.3"
